@startuml

abstract class Product
class ConcreteProductA
class ConcreteProductB
class Factory
class Client

Product <|-- ConcreteProductA
Product <|-- ConcreteProductB
Factory ...> ConcreteProductA
Factory ...> ConcreteProductB
Factory <-- Client
Product <-- Client

Factory : +factoryMethod(String arg)


@enduml
